portuguese grammar verified

--- a/public/produtos.html
+++ b/public/produtos.html
@@ -348,17 +348,6 @@
             </div>
           </div>
 
-
-          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
-            <div class="card card-body m-1">
-
-              <img src="images/products/DESCARTÁVEIS/TEM O NOME DA DOKASSA.jpg" alt="..." class="img-thumbnail"> -->
-              <hr>
-              <p class="card-text">TEM O NOME DA DOKASSA</p>
-            </div>
-          </div>
-
-
         </div>
       </div>
 
@@ -415,17 +404,6 @@
               <p class="card-text">FITAS DE TNT</p>
             </div>
           </div>
-
-
-          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
-            <div class="card card-body m-1">
-
-              <img src="images/products/EMBALAGENS PARA PRESENTES/FITA DE TNT.png" alt="..." class="img-thumbnail">
-              <hr>
-              <p class="card-text">FITAS DE TNT</p>
-            </div>
-          </div>
-
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
             <div class="card card-body m-1">
@@ -526,6 +504,27 @@
             </div>
           </div>
 
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+
+              <img src="images/products/EMBALAGENS PARA PRESENTES/LAÇO FÁCIL.jpg" alt="..." class="img-thumbnail">
+              <hr>
+              <p class="card-text">LAÇO FÁCIL</p>
+            </div>
+          </div>
+
+
+          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
+            <div class="card card-body m-1">
+
+              <img src="images/products/EMBALAGENS PARA PRESENTES/LAÇO FÁCIL(1).jpg" alt="..." class="img-thumbnail">
+              <hr>
+              <p class="card-text">LAÇO FÁCIL</p>
+            </div>
+          </div>
+
+
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
             <div class="card card-body m-1">
 
@@ -534,27 +533,6 @@
               <p class="card-text">LAÇO FÁCIL</p>
             </div>
           </div>
-
-
-          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
-            <div class="card card-body m-1">
-
-              <img src="images/products/EMBALAGENS PARA PRESENTES/LAÇO FÁCIL(3).jpg" alt="..." class="img-thumbnail">
-              <hr>
-              <p class="card-text">LAÇO FÁCIL</p>
-            </div>
-          </div>
-
-
-          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
-            <div class="card card-body m-1">
-
-              <img src="images/products/EMBALAGENS PARA PRESENTES/LAÇO FÁCIL(4).jpg" alt="..." class="img-thumbnail">
-              <hr>
-              <p class="card-text">LAÇO FÁCIL</p>
-            </div>
-          </div>
-
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
             <div class="card card-body m-1">
