Fixed pages handlebars and contact form

--- a/public/contato.html
+++ b/public/contato.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <!-- Logo  -->
-  <a name="top" <img class="logo"></a>
+  <a href="index.html" <img class="logo"></a>
   <!-- menu superior -->
   <nav class="navbar navbar-expand-lg navbar-dark menu-bar" style="background-color: #1c1f64;">
     <a class="navbar-brand h1" href="#"></a>
@@ -61,7 +61,7 @@
           <div class="col-md-6 col-sm-12 col-xs-12 mb-3">
             <label for="Fone">Fone</label>
             <input type="tel" class="form-control" name="phone" id="contato-fone" placeholder="Fone para contato">
-            <p class="bg-danger mt-2" id="error-fone">*** Favor preencher esse campo !</p>
+            <p class="bg-danger mt-2" id="error-fone">*** Favor verificar esse campo !</p>
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12 mb-3">
             <label for="mail">E-mail</label>
@@ -104,7 +104,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header" style="background-color: #1c1f64;border-bottom:2px solid white">
-          <a name="top" <img id="logo-modal" class="logo"></a>
+          <a href="index.html" <img id="logo-modal" class="logo"></a>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color:white">
             <span aria-hidden="true">&times;</span>
           </button>
