--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 <body>
   <!-- Logo  -->
   <!-- <a <img src="images/logo-samll2.jpeg" class="img-fluid float-right ml-3" alt="Responsive image"></a> -->
-  <a name="top" <img class="logo animated fadeInLeftBig"></a>
+  <a href="index.html" <img class="logo animated fadeInLeftBig"></a>
   <!-- menu superior -->
   <nav class="navbar navbar-expand-lg navbar-dark menu-bar" style="background-color: #1c1f64;">
     <a class="navbar-brand h1" href="#"></a>
