--- a/public/sobre.html
+++ b/public/sobre.html
@@ -25,7 +25,7 @@
 <body>
   <!-- Logo  -->
   <!-- <a <img src="images/logo-samll2.jpeg" class="img-fluid float-right ml-3" alt="Responsive image"></a> -->
-  <a name="top" <img class="logo"></a>
+<a href="index.html" <img class="logo"></a>
   <!-- menu superior -->
   <nav class="navbar navbar-expand-lg navbar-dark menu-bar" style="background-color: #1c1f64;">
     <a class="navbar-brand h1" href="#"></a>
@@ -67,7 +67,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header" style="background-color: #1c1f64;border-bottom:2px solid white">
-          <a name="top" <img id="logo-modal" class="logo"></a>
+          <a href="index.html" <img id="logo-modal" class="logo"></a>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color:white">
             <span aria-hidden="true">&times;</span>
           </button>
