fixed footer elements

--- a/public/sobre.html
+++ b/public/sobre.html
@@ -122,14 +122,12 @@
     <!-- Footer Links -->
     <div class="container text-center text-md-left mt-4">
       <div class="row">
-        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-1">
-
-          <!-- Content -->
-
+        <!-- <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-1">
           <h6 class="text-uppercase text-center font-weight-bold">Ajepel Embalagens</h6>
           <hr class="mb-1 mt-0 d-inline-block mx-auto" style="width: 100%;border-color:white">
+          Slogan
           <p>Aqui vai o slogan ou frase curta a respeito da empresa</p>
-        </div>
+        </div> -->
         <div class="col-6 col-md-2 col-lg-2 col-xl-2 mx-auto mb-1">
 
           <!-- Links  Social-->
