fixed footer elements

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Ricardo Furtado">
   <meta name="description" content=">A Ajepel conta com frota própria de veículos e de uma forma programada e ágil leva a mercadoria até você!
     Nossa equipe trabalha para promover a excelência no atendimento.">
-  <meta name="keywords" content="ajepel,Ajepel,ajapel,ajepel Embalagens,comercio,ajepel embalagens,embalagens,sacolas,pacotes,embalagem de x-salada">
+  <meta name="keywords" content="ajepel,Ajepel,ajapel,ajepel Embalagens,comercio,ajepel embalagens,embalagens,sacolas,pacotes,embalagem de x-salada,Osni Gonzaga da Silva,distribuidora de embalagens,Biguaçu,São José,Florianópolis,Palhoça,Antônio Carlos,Santo Amaro,Paulo Lopes,Águas Mornas, Rancho Queimado,Angelina">
   <!-- Bootstrap CSS -->
   <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css" />
