changes requested by the customer

--- a/public/contato.html
+++ b/public/contato.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="author" content="Ricardo Furtado">
-  <meta name="description" content=">A Ajepel conta com frota própria de veículos e de uma forma programada e ágil leva a mercadoria até você!
-    Nossa equipe trabalha para promover a excelência no atendimento.">
+  <meta name="description" content=">A Ajepel é uma distribuidora de embalagens que atua em Biguaçu, São José, Florianópolis, Palhoça, Antônio Carlos, Santo Amaro, Paulo Lopes, Águas Mornas, Rancho Queimado e Angelina.Trabalhamos com produtos de qualidade a preços competitivos, visando sempre a satisfação dos nossos clientes.">
   <meta name="keywords" content="Ajepel,Embalagens,embalagens,sacolas,pacotes,tijucas,queimados,florianopolis">
   <!-- Bootstrap CSS -->
   <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
@@ -16,7 +15,7 @@
   <link rel="stylesheet" href="index.css">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
-  <title>Ajepel Embalagens - Contato</title>
+  <title>Ajepel Embalagens | Sacos Sacolas Fitas Etiquetas Papeis</title>
 </head>
 <body>
   <!-- Logo  -->
